--- a/seance5.ipynb
+++ b/seance5.ipynb
@@ -1,137 +1,289 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ex1:\n",
-    "    \n",
-    "1. Ecrire une fonction qui prend en entrée une fonction f et des réels a et h et donne en sortie le taux de variation (ou d'accroissement) de la fonction f entre le point d'abscisse a+h et a.\n",
-    "2. Tester avec f(x)=3x^3+1x^2-5"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.6"
+    },
+    "colab": {
+      "name": "seance5.ipynb",
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ex2:\n",
-    "1. Ecrire une fonction qui calcule la liste des coefficients directeurs pour une fonction f définit sur I=[a;b] avec un pas \"p\"\n",
-    "2. Tester avec f(x)=(1+x)/(x-4) définit sur I=[0,1] avec un pas de 0.01"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ex3:\n",
-    "on considère une suite U définie par Un+1=Un+n+1 et de premier terme U0. Ecrire une fonction qui prend en entrée les valeurs de n et U0 et affiche la valeur de Un.\n",
-    "1. De facon iterative\n",
-    "2. Par recurence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ex4:\n",
-    "On pose Tn=n^2−(n−1)^2 ainsi que Sn=T1+T2+T3+...+Tn.\n",
-    "1. Etant donné n, afficher la valeur de Sn."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ex5:\n",
-    "Soit la suite définie par Un+1=0.5.Un et de premier terme U0. Plus la valeur de n augmente, plus les valeurs de Un se rapprochent de 0.\n",
-    "\n",
-    "Ecrire une fonction qui permet de déterminer pour un réel positif e donné, quel est le plus petit entier n tel que la valeur de Un soit inférieure à e.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ex6: Constante K de Catalan : https://fr.wikipedia.org/wiki/Constante_de_Catalan\n",
-    "Ecrire une fonction qui permet de retourner une valeur approchée de la constante K et en s’arrêtant dès que la valeur absolue de la différence entre deux somme successives devienne inférieure ou égale à une erreur epsilon donnée en paramètre.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ex 7:\n",
-    "Ecrivez une fonction permettant de calculer la limite à epsilon près de la suite définie par la relation de récurrence :\n",
-    "\n",
-    "U0 =2\n",
-    "Un+1= Un + 2/Un  , n>0.\n",
-    "\n",
-    "On arrête d’itérer quand l’intervalle entre 2 termes consécutifs devient strictement inférieur à epsilon."
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BLjg_k4g5sal"
+      },
+      "source": [
+        "Ex1:\n",
+        "    \n",
+        "1. Ecrire une fonction qui prend en entrée une fonction f et des réels a et h et donne en sortie le taux de variation (ou d'accroissement) de la fonction f entre le point d'abscisse a+h et a.\n",
+        "2. Tester avec f(x)=3x^3+1x^2-5"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m7YvTlXJ5sap",
+        "outputId": "377ff831-da32-4242-c352-8112aec0d212",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def variation(f, a, h): \n",
+        "    return (f(a+h)-f(a-h))/(2*h)\n",
+        "\n",
+        "def f(x):\n",
+        "    return 3*(x**3)+x**2-5 \n",
+        "\n",
+        "print(variation(f,5,0.00001))"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "234.99999999216922\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8GkqoaOl5sax"
+      },
+      "source": [
+        "Ex2:\n",
+        "1. Ecrire une fonction qui calcule la liste des coefficients directeurs pour une fonction f définit sur I=[a;b] avec un pas \"p\"\n",
+        "2. Tester avec f(x)=(1+x)/(x-4) définit sur I=[0,1] avec un pas de 0.01"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IYWDlteO5say",
+        "outputId": "fad0d6a1-c183-42ed-bf7d-1c71a617ec3b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from scipy import *\n",
+        "\n",
+        "def dir(f, a, b): \n",
+        "    return (f(b)-f(a))/(b-a)\n",
+        "\n",
+        "def coef_dir(f, a, b, p): \n",
+        "    \n",
+        "    liste = []\n",
+        "\n",
+        "    while a < b:\n",
+        "      print(dir(f,a,a+p))\n",
+        "      a = a + p\n",
+        "    \n",
+        "    \n",
+        "def f(x):\n",
+        "    return (1+x)/(x-4)\n",
+        "\n",
+        "coef_dir(f, 0, 1, 0.01)\n"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-0.5537098560354554\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G78805Px5sa2"
+      },
+      "source": [
+        "Ex3:\n",
+        "on considère une suite U définie par Un+1=Un+n+1 et de premier terme U0. Ecrire une fonction qui prend en entrée les valeurs de n et U0 et affiche la valeur de Un.\n",
+        "1. De facon iterative\n",
+        "2. Par recurence"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8LG3bjCq5sa2",
+        "outputId": "fe57f85d-4aa7-4dca-cc81-83cd1528e84a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def suite(n, U0):\n",
+        "  \n",
+        "  Un=U0\n",
+        "  for i in range(1,n+1):\n",
+        "    Un=Un+i+1\n",
+        "    print(\"U\",i,\"=\",Un)\n",
+        "  return Un\n",
+        "\n",
+        "def recur(n, Un, i) :\n",
+        "  if()\n",
+        "print(suite(5, 4))"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "U 1 = 6\n",
+            "U 2 = 9\n",
+            "U 3 = 13\n",
+            "U 4 = 18\n",
+            "U 5 = 24\n",
+            "24\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YqyaPrSe5sa6"
+      },
+      "source": [
+        "Ex4:\n",
+        "On pose Tn=n^2−(n−1)^2 ainsi que Sn=T1+T2+T3+...+Tn.\n",
+        "1. Etant donné n, afficher la valeur de Sn."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kY4ANSe75sa6",
+        "outputId": "d41f9f33-025d-4953-d225-3c3b52d5f6ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def t(x):\n",
+        "  return x**2-(x-1)**2\n",
+        "\n",
+        "def sn(n):\n",
+        "  S=0\n",
+        "  for i in range (n+1):\n",
+        "    S=S+t(i)\n",
+        "    #print(\"U\",i,\"=\",S)\n",
+        "  return S\n",
+        "\n",
+        "print(sn(5))"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "U 0 = -1\n",
+            "U 1 = 0\n",
+            "U 2 = 3\n",
+            "U 3 = 8\n",
+            "U 4 = 15\n",
+            "U 5 = 24\n",
+            "24\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7Odzvf3q5sa-"
+      },
+      "source": [
+        "Ex5:\n",
+        "Soit la suite définie par Un+1=0.5.Un et de premier terme U0. Plus la valeur de n augmente, plus les valeurs de Un se rapprochent de 0.\n",
+        "\n",
+        "Ecrire une fonction qui permet de déterminer pour un réel positif e donné, quel est le plus petit entier n tel que la valeur de Un soit inférieure à e.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ey_KbbmU5sa_"
+      },
+      "source": [
+        "def suite(U, n, e):\n",
+        "  \n",
+        "  Un=U0\n",
+        "  while Un\n",
+        "  for i in range(1,n+1):\n",
+        "    Un=Un*0.5\n",
+        "  return Un\n",
+        "\n",
+        "print(suite(5, 4))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mnU69Qbr5sbC"
+      },
+      "source": [
+        "Ex6: Constante K de Catalan : https://fr.wikipedia.org/wiki/Constante_de_Catalan\n",
+        "Ecrire une fonction qui permet de retourner une valeur approchée de la constante K et en s’arrêtant dès que la valeur absolue de la différence entre deux somme successives devienne inférieure ou égale à une erreur epsilon donnée en paramètre.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uQ72umHf5sbD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CwXp1PuV5sbH"
+      },
+      "source": [
+        "Ex 7:\n",
+        "Ecrivez une fonction permettant de calculer la limite à epsilon près de la suite définie par la relation de récurrence :\n",
+        "\n",
+        "U0 =2\n",
+        "Un+1= Un + 2/Un  , n>0.\n",
+        "\n",
+        "On arrête d’itérer quand l’intervalle entre 2 termes consécutifs devient strictement inférieur à epsilon."
+      ]
+    }
+  ]
 }
